--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    
 
     <div class="container">
 
@@ -87,6 +88,7 @@
             <div class="quiz-header">
                 <div class="question-counter" id="question-counter">Question 1 of 5</div>
                 <div class="participant-name" id="quiz-participant-name"></div>
+                <div class="question-counter" id="timer">20s</div>
             </div>
 
             <div class="question-text" id="question-text"></div>
@@ -147,6 +149,7 @@
         </div>
 
     </div>
+  
 
     <script src="script.js"></script>
 </body>
